# hook-observatory

./: .gitignore  .verify.json  AGENTS.md  CLAUDE.md  CLAUDE.zh-Tw.md  CONTRACT_FOR_ADVERSARY.md  CONTRACT_FOR_ADVERSARY_DATA_FLOW.md  FOLLOWUP.md  GEMINI.md  HANDOFF.md  Makefile  OPENCODE.md  PHASE_5B_LINE_REVIEW.md  PHASE_5_REVIEW.md  PROGRESS.md  QWEN.md  README.md  README.zh.md  STAGE3-READY.md  auth.py  config.example.yaml  config.py  config.yaml  database.py  generate_skill_icons.py  generate_skill_icons_second_batch.py  generate_smart_search_icon.py  go.mod  go.sum  install.sh  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  routes.py  schemas.py  spool.py  store.py
core/: README.en.md  README.md  alembic.ini  pyproject.toml  test_fsm_store_integration.py
core/alembic/versions/: s1t2u3v4w5x6_add_docvault_kg_tables.py  t1u2v3w4x5y6_add_assistant_qa_log.py  t7u8v9w0x1y2_add_signal_type_session_count_to_blocks.py
core/cli/: admin.py  auth.py  capture.py  cli_helpers.py  cli_utils.py  crawl4ai_cli.py  dailyos.py  docvault.py  exit_codes.py  finance.py  intelflow.py  invest.py  memvault.py  nodeflow.py  notification.py  paper.py  taskflow.py
core/cli/briefing/: run.py
core/cli/ocr/: main.py
core/cli/stt/: main.py
core/cli/tts/: main.py
core/cli/vision/: main.py
core/migrations/: env.py  memvault_fts_index.sql
core/migrations/manual/: feature-memvault-cann-2-fold-verifier.sql
core/migrations/versions/: 2bb21e53cb53_create_memvault_schema.py  57b1ac650965_merge_entity_edges_blocks_valid_at_.py  a1b2c3d4e5f6_create_auth_schema.py  a1b2c3d4e5f6_create_search_feedback_table.py  a1b2c3d4e5f7_kg_entity_resolution_edge_invalidation.py  a2b3c4d5e6f7_leiden_community_tables.py  b2c3d4e5f6g7_memvault_blocks_access_tracking.py  b8c9d0e1f2g3_add_dailyos_descriptions_and_daily_reset.py  c4d5e6f7a8b9_add_memvault_kg_tables.py  c9d0e1f2g3h4_dailyos_multi_active_dimensions.py  cf31e3f5dcc3_add_briefing_entries_and_status.py  d0e1f2g3h4i5_create_recurring_items.py  d0e1f2g3h4i5_dailyos_marvin_cannibalize_p0_p4.py  d5e6f7a8b9c0_rename_kas_profiles_to_profile_scores.py  e1f2g3h4i5j6_migrate_briefing_embedding_1024.py  e2f3g4h5i6j7_create_activity_spans.py  e6f7a8b9c0d1_create_intelflow_schema.py  ee536d18be05_kg_triple_verification_fields_auto_.py  f2g3h4i5j6k7_add_capture_partial_indexes.py  f3g4h5i6j7k8_dailyos_marvin_cannibalize_p0_p4.py  f7a8b9c0d1e2_add_partial_indexes.py  g4h5i6j7k8l9_create_paper_schema.py  g8b9c0d1e2f3_create_embedding_subtables.py  g9h0i1j2k3l4_drop_pgvector_embedding_columns.py  h0i1j2k3l4m5_create_search_feedback_table.py  h9a0b1c2d3e4_create_archive_tables.py  i0a1b2c3d4e5_create_finance_schema.py  i0a1b2c3d4e5_create_sentinel_schema.py  i0b1c2d3e4f5_auth_oauth_sessions.py  i1j2k3l4m5n6_briefing_search_config.py  j1a2b3c4d5e6_create_sentinel_schema.py  j1b2c3d4e5f6_adjust_hnsw_hot_windows.py  j2k3l4m5n6o7_add_community_description_zh.py  k2c3d4e5f6g7_create_frozen_tables.py  k3l4m5n6o7p8_add_triple_display_zh.py  l3d4e5f6g7h8_create_remaining_frozen_tables.py  l4m5n6o7p8q9_add_kg_access_tracking.py  m4e5f6g7h8i9_audit_trail_soft_delete.py  m5n6o7p8q9r0_add_query_journal_interest_snapshot.py  m5n6o7p8q9r1_add_skill_profiles.py  (+28 more)
core/scripts/: generate_fsm_diagrams.py  generate_vapid_keys.py  import_v1_memories.py  memvault_re_embed.py  migrate_briefing_entries.py  migrate_v1_finance.py  qdrant_backfill.py  qdrant_health.py  test_finance_api.py
core/services/media/: pyproject.toml
core/src/: config.py  main.py
core/src/events/: bus.py  causality.py  channel.py  types.py
core/src/hooks/: bus.py  registry.py
core/src/middleware/: __init__.py  request_id.py  session.py
core/src/routes/: health.py
core/src/shared/: __init__.py  _ax_worker.py  access_tracker.py  actions.py  (+48 more)
core/tests/: conftest.py  test_async_qdrant.py  test_async_qdrant_integration.py  test_ax_bridge.py  test_bridge_timeout.py  test_capture_confidence_threshold.py  test_completion.py  test_crawl4ai_batch1.py  test_crawl4ai_e2e.py  test_crawl4ai_integration.py  test_crud_auto_events.py  test_dailyos_memvault_feedback.py  test_ensure_method.py  test_event_channel.py  test_event_correlation.py  test_event_delivery.py  test_exchange_retry.py  test_finance.py  test_finance_snapshots.py  test_lifecycle_imports.py  test_lifecycle_script.py  test_memvault.py  test_notification_channels.py  test_notification_fleet.py  test_paper_retry.py  test_queue_owner.py  test_reactive_composition.py  test_retry_integration.py  test_rlm_engine.py  test_storage_frozen.py  test_threshold_invariants.py  test_tier_config.py  test_turn_controller.py
installer/src-tauri/: Cargo.toml  tauri.conf.json
invest-svc/: Dockerfile  config.py  main.py  pyproject.toml  test_invest_svc.py
invest-svc/invest/: __init__.py  models.py  routes.py  schemas.py  services.py
invest-svc/shared/: __init__.py  database.py  errors.py  models.py  schemas.py  services.py
libs/audio-ops/: pyproject.toml
libs/cli-dic/: pyproject.toml
libs/image-ops/: pyproject.toml
libs/kg-ops/: pyproject.toml
libs/obsidian-sync/: pyproject.toml
libs/ops-core/: pyproject.toml
libs/port-registry/: Cargo.toml
libs/python/: pyproject.toml
libs/rust-sqlite-pool/: Cargo.toml
libs/sdk-client/: pyproject.toml
libs/svc-shared/: pyproject.toml
libs/text-ops/: pyproject.toml
libs/video-ops/: pyproject.toml
libs/workshop-log-rs/: Cargo.toml
mcp/finance-wallet/: pyproject.toml  server.py
services/core/: README.md  pyproject.toml
services/gateway/: README.md  pyproject.toml
services/paper/: Dockerfile  pyproject.toml
stations/agent-metrics/: Cargo.toml  Dockerfile  pyproject.toml  quota_gate_policy.json  store.py  test_tier_routing.py
stations/agent-metrics-rs/: .gitignore  Cargo.toml
stations/agentops/: pyproject.toml
stations/auto-survey/: Cargo.toml  PHASE_5B_LINE_REVIEW.md  PHASE_5C_LINE_FIX.md  pyproject.toml  store.py
stations/browser-bridge/: pyproject.toml
stations/browser-render/: Cargo.toml  README.md  config.yaml
stations/capture-console/: pyproject.toml  server.py
(+3099 files in other folders)
