[project]
name = "workshop"
version = "0.0.1"
description = "Modular Monolith + Event-Driven workspace"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "services/*",
    "libs/python",
]

[tool.hatch.build.targets.wheel]
packages = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
