[project]
name = "hook-observatory"
version = "0.1.0"
description = "Claude Code hook event observatory — stats, timeline, dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "itsdangerous>=2.2.0",
    "tomli>=2.2.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.10.0",
]

[project.scripts]
hook-observatory = "main:cli"
