[project]
name = "core"
version = "0.1.0"
description = "Core — Modular Monolith"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "itsdangerous>=2.0",
    "email-validator>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "uuid-utils>=0.9",
    "argon2-cffi>=23.1",
    "authlib>=1.3",
    "pywebpush>=2.0",
    "py-vapid>=1.9",
    "cryptography>=42.0",
    "python-statemachine==3.0.0",
    "sse-starlette>=2.0",
    "psutil>=6.0",
    "qdrant-client>=1.12",
    "jieba>=0.42",
    "snowballstemmer>=3.0",
    "igraph>=0.11",
    "workshop-text-ops",
    "pydantic-ai[openai]>=1.77",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
# pythonpath intentionally NOT set — `_core.pth` already exposes `core/` at
# .venv site-packages level, making `src.modules.X` the canonical import path.
# Setting `pythonpath = ["src/modules"]` (an earlier hotfix) created a SECOND
# import root that let SQLAlchemy register `memvault.blocks` twice via
# `memvault.models` AND `src.modules.memvault.models`. Don't reintroduce it.
asyncio_mode = "auto"
