[project]
name = "workshop-audio-ops"
version = "0.1.0"
description = "Workshop audio preprocessing operators"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0", "soundfile>=0.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audio_ops"]
