[project]
name = "workshop-audio-ops"
version = "0.2.0"
description = "Workshop audio preprocessing operators"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0", "soundfile>=0.13"]

# Optional ops gated behind extras to keep the core lib light.
# - `similarity` pulls resemblyzer (ECAPA-TDNN d-vector) + scipy. Ships an
#   80MB model on first use. Powers SpeakerSimilarityOp.
# - `visualize`  pulls librosa + matplotlib for waveform / mel-spec / bar PNGs.
#   Powers VisualizeOp.
# `eval` = both, the typical voice-clone QA combo.
[project.optional-dependencies]
similarity = ["resemblyzer>=0.1.4", "scipy>=1.10"]
visualize = ["librosa>=0.10", "matplotlib>=3.7"]
eval = ["resemblyzer>=0.1.4", "scipy>=1.10", "librosa>=0.10", "matplotlib>=3.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audio_ops"]
