[project]
name = "workshop-cli-dic"
version = "0.1.0"
description = "CLI tool dictionary — declarative descriptors for coding CLI tools"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli_dic"]
