[project]
name = "workshop-image-ops"
version = "0.1.0"
description = "Workshop image preprocessing operators"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["image_ops"]
