[project]
name = "workshop-kg-ops"
version = "0.1.0"
description = "Knowledge Graph operators — entity normalization, triple extraction, community detection"
requires-python = ">=3.12"
dependencies = ["igraph>=0.11", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kg_ops"]
