[project]
name = "workshop-ops-core"
version = "0.1.0"
description = "Shared operator protocol, pipeline, and combinators for media-ops libs"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ops_core"]
