[project]
name = "workshop-lib"
version = "0.1.0"
description = "Shared Python library for Workshop — API clients, utilities"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workshop"]
