[package]
name = "workshop-sqlite-pool"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Workshop shared SQLite pool helper — enforces WAL+NORMAL+busy_timeout+autocheckpoint baseline across all Rust stations"

[lib]
name = "workshop_sqlite_pool"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
