[project]
name = "svc-shared"
version = "0.1.0"
description = "Shared utilities for standalone microservices extracted from Workshop Core Monolith"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "uuid-utils>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["svc_shared"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
