[project]
name = "workshop-text-ops"
version = "0.2.0"
description = "Shared text operations — noise detection, content normalization, text similarity"
requires-python = ">=3.12"
dependencies = [
    "zhdate>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["text_ops"]
