[project]
name = "workshop-video-ops"
version = "0.1.0"
description = "Workshop video processing operators"
requires-python = ">=3.12"
dependencies = ["workshop-image-ops"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["video_ops"]
