[project]
name = "gateway"
version = "0.0.1"
description = "API Gateway — routing, auth, health aggregation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "itsdangerous>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
