[project]
name = "workshop-paper-svc"
version = "0.1.0"
description = "Workshop Paper Service — standalone microservice POC"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "uuid-utils>=0.10",
    # LLM / embedding (best-effort, used by digest and search)
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S"]
ignore = ["S101", "S311"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
