[package]
name = "agent-metrics-rs"
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
description = "Workshop agent-metrics station — Rust rewrite (sysmon + guardian + sweep + collectors + dispatch)"

[[bin]]
name = "agent-metrics-rs"
path = "src/main.rs"

[lib]
name = "agent_metrics_rs"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "uuid", "chrono", "json"] }
workshop-sqlite-pool = { path = "../../libs/rust-sqlite-pool" }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
sysinfo = "0.32"
minijinja = { version = "2", features = ["loader"] }
async-trait = "0.1"
futures = "0.3"
once_cell = "1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
