[project]
name = "agent-metrics"
version = "0.2.0"
description = "Agent Metrics — session tracking, multi-CLI dispatch & team-task management"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "structlog>=24.4",
    "redis>=5.0",
    "jinja2>=3.1",
    "immutables>=0.20",
]

[project.scripts]
agent-metrics = "agent_metrics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_metrics"]

[tool.ruff]
target-version = "py312"
line-length = 100
