[project]
name = "workshop-auto-survey"
version = "0.1.0"
description = "Automated SurveyCake form filler for attendance and quizzes"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "click>=8.1.0",
]

[project.scripts]
auto-survey = "auto_survey.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_survey"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
