[project]
name = "browser-bridge"
version = "0.1.0"
description = "Browser automation bridge — Agent as your hands"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "click>=8.1.0",
]

[project.scripts]
bridge = "browser_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_bridge"]
