[project]
name = "workshop-capture-console"
version = "0.1.0"
description = "Capture Console — Gemini CLI pane manager + WebSocket relay"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
